<resources>
    <string name="app_name">KADE5</string>
    <string name="date">Date</string>
    <string name="home">Home</string>
    <string name="zero">0</string>
    <string name="vs">vs</string>
    <string name="away">Away</string>
    <string name="stadium">Stadium</string>
    <string name="goals">Goals</string>
    <string name="last_event">Last Event</string>
    <string name="next_event">Next Event</string>
    <string name="favorites">Favorites</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>

</resources>
