<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".detail.DetailMatchActivity">

    <TextView
            android:id="@+id/tvStadium"
            android:layout_marginTop="5dp"
            android:text="@string/stadium"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvDateEvent"
            android:layout_margin="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/date"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
            <ImageView
                    android:id="@+id/imgHomeBadge"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            <TextView
                    android:id="@+id/tvHomeTeam"
                    android:layout_marginTop="5dp"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
                android:id="@+id/tvHomeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/zero"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/vs"/>

        <TextView
                android:id="@+id/tvAwayScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/zero"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
            <ImageView
                    android:id="@+id/imgAwayBadge"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            <TextView
                    android:id="@+id/tvAwayTeam"
                    android:layout_marginTop="5dp"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
            android:text="@string/goals"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:id="@+id/tvGoalHomeDetails"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        <TextView
                android:id="@+id/tvGoalAwayDetails"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>